--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <a-scene>
         <a-assets>
-            <img id="image" src="images/panorama.jpg">
+            <img id="image" src="images/panorama2.jpg">
         </a-assets>
         <a-sky id="image-360" radius="10" src="#image"></a-sky>
     </a-scene>
