--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
             <img id="image" src="images/panorama2.jpg">
         </a-assets>
         <a-sky id="image-360" radius="10" src="#image"></a-sky>
+		<a-text font="kelsonsans" value="Portland, USA" width="6" position="-2.5 0.25 -1.5"
+				rotation="0 15 0"></a-text>
     </a-scene>
 </body>
